[gd_scene load_steps=32 format=2]

[ext_resource path="res://tileset/tilemap_lone_dungeon.tres" type="TileSet" id=1]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=2]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/chapter5/obj_door.gd" type="Script" id=4]
[ext_resource path="res://tileset/feeling_dungeon.png" type="Texture" id=5]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=6]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=7]
[ext_resource path="res://sfx/Retro Explosion Short 15.wav" type="AudioStream" id=8]
[ext_resource path="res://sprites/spr_void/spr_void2.png" type="Texture" id=9]
[ext_resource path="res://sprites/spr_void/spr_void.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_void/spr_void1.png" type="Texture" id=11]
[ext_resource path="res://sprites/spr_void/spr_void4.png" type="Texture" id=12]
[ext_resource path="res://sprites/spr_void/spr_void3.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_void/spr_void5.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_void/spr_void6.png" type="Texture" id=15]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.gd" type="Script" id=16]
[ext_resource path="res://maps/chapter5/void.gd" type="Script" id=17]
[ext_resource path="res://maps/chapter5/chapter5-wrath.gd" type="Script" id=18]
[ext_resource path="res://maps/chapter5/aberration_anim.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=20]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=21]
[ext_resource path="res://sprites/spr_mc/spr_darkmc_shadow.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 10 ) ],
"loop": true,
"name": "signalling",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 45.2548, 45.2548 )

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("area_void_attack/polygon_void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_void_attack/col_void_attack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("area_void_attack/polygon_void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.241484, 0.153893, 0.241484 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_void_attack/col_void_attack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.24, 0.15, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sfx_explosion:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="chapter5-lone" type="Node2D"]
script = ExtResource( 18 )

[node name="dialogue_system" parent="." instance=ExtResource( 20 )]
boss = "void"

[node name="0" parent="dialogue_system" instance=ExtResource( 21 )]
dialogue_lines = [ [ "Bagaimana dengan perempuan itu?", "Benarkah kamu menyelesaikan masalahnya?" ], [ "How about her?", "Did you truly solve her problem?" ] ]
dialogue_picture_resource = [ ExtResource( 22 ), null ]
dialogue_command = "enable_boss"

[node name="aberration_anim" parent="." instance=ExtResource( 19 )]

[node name="tilemap_lone_dungeon" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1310733, 1, 65537, -1310732, 1, 65537, -1310731, 1, 65537, -1310730, 1, 65537, -1310729, 3, 0, -1310728, 3, 1, -1310727, 3, 1, -1310726, 3, 1, -1310725, 3, 1, -1310724, 3, 1, -1310723, 3, 1, -1310722, 1, 131074, -1310721, 1, 65537, -1376256, 1, 65537, -1376255, 1, 131072, -1376254, 3, 1, -1376253, 3, 1, -1376252, 3, 1, -1376251, 3, 1, -1376250, 3, 1, -1376249, 3, 1, -1376248, 3, 2, -1376247, 1, 65537, -1376246, 1, 65537, -1376245, 1, 65537, -1376244, 1, 65537, -1245197, 1, 65537, -1245196, 1, 65537, -1245195, 1, 65537, -1245194, 1, 65537, -1245193, 3, 65536, -1245192, 2, 0, -1245191, 2, 0, -1245190, 2, 0, -1245189, 2, 0, -1245188, 2, 0, -1245187, 2, 0, -1245186, 2, 0, -1245185, 1, 65537, -1310720, 1, 65537, -1310719, 2, 0, -1310718, 2, 0, -1310717, 2, 0, -1310716, 2, 0, -1310715, 2, 0, -1310714, 2, 0, -1310713, 2, 0, -1310712, 3, 65538, -1310711, 1, 65537, -1310710, 1, 65537, -1310709, 1, 65537, -1310708, 1, 65537, -1179661, 1, 65537, -1179660, 1, 65537, -1179659, 1, 65537, -1179658, 1, 65537, -1179657, 3, 65536, -1179649, 1, 65537, -1245184, 1, 65537, -1245176, 3, 65538, -1245175, 1, 65537, -1245174, 1, 65537, -1245173, 1, 65537, -1245172, 1, 65537, -1114125, 1, 65537, -1114124, 1, 65537, -1114123, 1, 65537, -1114122, 1, 65537, -1114121, 3, 65536, -1114120, 1, 65537, -1114119, 1, 65537, -1114118, 1, 65537, -1114117, 1, 65537, -1114116, 1, 65537, -1114115, 1, 65537, -1114114, 1, 65537, -1114113, 1, 65537, -1179648, 1, 65537, -1179647, 1, 65537, -1179646, 1, 65537, -1179645, 1, 65537, -1179644, 1, 65537, -1179643, 1, 65537, -1179642, 1, 65537, -1179641, 1, 65537, -1179640, 3, 65538, -1179639, 1, 65537, -1179638, 1, 65537, -1179637, 1, 65537, -1179636, 1, 65537, -1048589, 1, 65537, -1048588, 1, 65537, -1048587, 1, 65537, -1048586, 1, 65537, -1048585, 3, 65536, -1048584, 1, 65537, -1048583, 1, 65537, -1048582, 1, 65537, -1048581, 1, 65537, -1048580, 1, 65537, -1048579, 1, 65537, -1048578, 1, 65537, -1048577, 1, 65537, -1114112, 1, 65537, -1114111, 1, 65537, -1114110, 1, 65537, -1114109, 1, 65537, -1114108, 1, 65537, -1114107, 1, 65537, -1114106, 1, 65537, -1114105, 1, 65537, -1114104, 3, 65538, -1114103, 1, 65537, -1114102, 1, 65537, -1114101, 1, 65537, -1114100, 1, 65537, -983053, 1, 65537, -983052, 1, 65537, -983051, 1, 65537, -983050, 1, 65537, -983049, 3, 65536, -983048, 1, 65537, -983047, 1, 65537, -983046, 1, 65537, -983045, 1, 65537, -983044, 1, 65537, -983043, 1, 65537, -983042, 1, 65537, -983041, 1, 65537, -1048576, 1, 65537, -1048575, 1, 65537, -1048574, 1, 65537, -1048573, 1, 65537, -1048572, 1, 65537, -1048571, 1, 65537, -1048570, 1, 65537, -1048569, 1, 65537, -1048568, 3, 65538, -1048567, 1, 65537, -1048566, 1, 65537, -1048565, 1, 65537, -1048564, 1, 65537, -917517, 1, 65537, -917516, 1, 65537, -917515, 1, 65537, -917514, 1, 65537, -917513, 3, 65536, -917512, 1, 65537, -917511, 1, 65537, -917510, 1, 65537, -917509, 1, 65537, -917508, 1, 65537, -917507, 1, 65537, -917506, 1, 65537, -917505, 1, 65537, -983040, 1, 65537, -983039, 1, 65537, -983038, 1, 65537, -983037, 1, 65537, -983036, 1, 65537, -983035, 1, 65537, -983034, 1, 65537, -983033, 1, 65537, -983032, 3, 65538, -983031, 1, 65537, -983030, 1, 65537, -983029, 1, 65537, -983028, 1, 65537, -851981, 1, 65537, -851980, 1, 65537, -851979, 1, 65537, -851978, 1, 65537, -851977, 3, 65536, -851976, 1, 65537, -851975, 1, 65537, -851974, 1, 65537, -851973, 1, 65537, -851972, 1, 65537, -851971, 1, 65537, -851970, 1, 65537, -851969, 1, 65537, -917504, 1, 65537, -917503, 1, 65537, -917502, 1, 65537, -917501, 1, 65537, -917500, 1, 65537, -917499, 1, 65537, -917498, 1, 65537, -917497, 1, 65537, -917496, 3, 65538, -917495, 1, 65537, -917494, 1, 65537, -917493, 1, 65537, -917492, 1, 65537, -786445, 1, 65537, -786444, 1, 65537, -786443, 1, 65537, -786442, 1, 65537, -786441, 3, 65536, -786440, 1, 65537, -786439, 1, 65537, -786438, 1, 65537, -786437, 1, 65537, -786436, 1, 65537, -786435, 1, 65537, -786434, 1, 65537, -786433, 1, 65537, -851968, 1, 65537, -851967, 1, 65537, -851966, 1, 65537, -851965, 1, 65537, -851964, 1, 65537, -851963, 1, 65537, -851962, 1, 65537, -851961, 1, 65537, -851960, 3, 65538, -851959, 1, 65537, -851958, 1, 65537, -851957, 1, 65537, -851956, 1, 65537, -720909, 1, 65537, -720908, 1, 65537, -720907, 1, 65537, -720906, 1, 65537, -720905, 3, 65536, -720904, 1, 65537, -720903, 1, 65537, -720902, 1, 65537, -720901, 1, 65537, -720900, 1, 65537, -720899, 1, 65537, -720898, 1, 65537, -720897, 1, 65537, -786432, 1, 65537, -786431, 1, 65537, -786430, 1, 65537, -786429, 1, 65537, -786428, 1, 65537, -786427, 1, 65537, -786426, 1, 65537, -786425, 1, 65537, -786424, 3, 65538, -786423, 1, 65537, -786422, 1, 65537, -786421, 1, 65537, -786420, 1, 65537, -655373, 1, 65537, -655372, 1, 65537, -655371, 1, 65537, -655370, 1, 65537, -655369, 3, 65536, -655368, 1, 65537, -655367, 1, 65537, -655366, 1, 65537, -655365, 1, 65537, -655364, 1, 65537, -655363, 1, 65537, -655362, 1, 65537, -655361, 1, 65537, -720896, 1, 65537, -720895, 1, 65537, -720894, 1, 65537, -720893, 1, 65537, -720892, 1, 65537, -720891, 1, 65537, -720890, 1, 65537, -720889, 1, 65537, -720888, 3, 65538, -720887, 1, 65537, -720886, 1, 65537, -720885, 1, 65537, -720884, 1, 65537, -589837, 1, 65537, -589836, 1, 65537, -589835, 1, 65537, -589834, 1, 65537, -589833, 3, 65536, -589832, 1, 65537, -589831, 1, 65537, -589830, 1, 65537, -589829, 1, 65537, -589828, 1, 65537, -589827, 1, 65537, -589826, 1, 65537, -589825, 1, 65537, -655360, 1, 65537, -655359, 1, 65537, -655358, 1, 65537, -655357, 1, 65537, -655356, 1, 65537, -655355, 1, 65537, -655354, 1, 65537, -655353, 1, 65537, -655352, 3, 65538, -655351, 1, 65537, -655350, 1, 65537, -655349, 1, 65537, -655348, 1, 65537, -524301, 1, 65537, -524300, 1, 65537, -524299, 1, 65537, -524298, 1, 65537, -524297, 3, 65536, -524296, 1, 65537, -524295, 1, 65537, -524294, 1, 65537, -524293, 1, 65537, -524292, 1, 65537, -524291, 1, 65537, -524290, 1, 65537, -524289, 1, 65537, -589824, 1, 65537, -589823, 1, 65537, -589822, 1, 65537, -589821, 1, 65537, -589820, 1, 65537, -589819, 1, 65537, -589818, 1, 65537, -589817, 1, 65537, -589816, 3, 65538, -589815, 1, 65537, -589814, 1, 65537, -589813, 1, 65537, -589812, 1, 65537, -458765, 1, 65537, -458764, 1, 65537, -458763, 1, 65537, -458762, 1, 65537, -458761, 3, 65536, -458760, 1, 65537, -458759, 1, 65537, -458758, 1, 65537, -458757, 1, 65537, -458756, 1, 65537, -458755, 1, 65537, -458754, 1, 65537, -458753, 1, 65537, -524288, 1, 65537, -524287, 1, 65537, -524286, 1, 65537, -524285, 1, 65537, -524284, 1, 65537, -524283, 1, 65537, -524282, 1, 65537, -524281, 1, 65537, -524280, 3, 65538, -524279, 1, 65537, -524278, 1, 65537, -524277, 1, 65537, -524276, 1, 65537, -393229, 1, 65537, -393228, 1, 65537, -393227, 1, 65537, -393226, 1, 65537, -393225, 3, 65536, -393224, 1, 65537, -393223, 1, 65537, -393222, 1, 65537, -393221, 1, 65537, -393220, 1, 65537, -393219, 1, 65537, -393218, 1, 65537, -393217, 1, 65537, -458752, 1, 65537, -458751, 1, 65537, -458750, 1, 65537, -458749, 1, 65537, -458748, 1, 65537, -458747, 1, 65537, -458746, 1, 65537, -458745, 1, 65537, -458744, 3, 65538, -458743, 1, 65537, -458742, 1, 65537, -458741, 1, 65537, -458740, 1, 65537, -327693, 1, 65537, -327692, 1, 65537, -327691, 1, 65537, -327690, 1, 65537, -327689, 3, 65536, -327688, 1, 65537, -327687, 1, 65537, -327686, 1, 65537, -327685, 1, 65537, -327684, 1, 65537, -327683, 1, 65537, -327682, 1, 65537, -327681, 1, 65537, -393216, 1, 65537, -393215, 1, 65537, -393214, 1, 65537, -393213, 1, 65537, -393212, 1, 65537, -393211, 1, 65537, -393210, 1, 65537, -393209, 1, 65537, -393208, 3, 65538, -393207, 1, 65537, -393206, 1, 65537, -393205, 1, 65537, -393204, 1, 65537, -262157, 1, 65537, -262156, 1, 65537, -262155, 1, 65537, -262154, 1, 65537, -262153, 3, 65536, -262152, 1, 65537, -262151, 1, 65537, -262150, 1, 65537, -262149, 1, 65537, -262148, 1, 65537, -262147, 1, 65537, -262146, 1, 65537, -262145, 1, 65537, -327680, 1, 65537, -327679, 1, 65537, -327678, 1, 65537, -327677, 1, 65537, -327676, 1, 65537, -327675, 1, 65537, -327674, 1, 65537, -327673, 1, 65537, -327672, 3, 65538, -327671, 1, 65537, -327670, 1, 65537, -327669, 1, 65537, -327668, 1, 65537, -196621, 1, 65537, -196620, 1, 65537, -196619, 1, 65537, -196618, 1, 65537, -196617, 3, 65536, -196616, 1, 65537, -196615, 1, 65537, -196614, 1, 65537, -196613, 1, 65537, -196612, 1, 65537, -196611, 1, 65537, -196610, 1, 65537, -196609, 1, 65537, -262144, 1, 65537, -262143, 1, 65537, -262142, 1, 65537, -262141, 1, 65537, -262140, 1, 65537, -262139, 1, 65537, -262138, 1, 65537, -262137, 1, 65537, -262136, 3, 65538, -262135, 1, 65537, -262134, 1, 65537, -262133, 1, 65537, -262132, 1, 65537, -131085, 1, 65537, -131084, 1, 65537, -131083, 1, 65537, -131082, 1, 65537, -131081, 3, 65536, -131080, 1, 65537, -131079, 1, 65537, -131078, 1, 65537, -131077, 1, 65537, -131076, 1, 65537, -131075, 1, 65537, -131074, 1, 65537, -131073, 1, 65537, -196608, 1, 65537, -196607, 1, 65537, -196606, 1, 65537, -196605, 1, 65537, -196604, 1, 65537, -196603, 1, 65537, -196602, 1, 65537, -196601, 1, 65537, -196600, 3, 65538, -196599, 1, 65537, -196598, 1, 65537, -196597, 1, 65537, -196596, 1, 65537, -65549, 1, 65537, -65548, 1, 65537, -65547, 1, 65537, -65546, 1, 65537, -65545, 3, 65536, -65544, 1, 65537, -65543, 1, 65537, -65542, 1, 65537, -65541, 1, 65537, -65540, 1, 65537, -65539, 1, 65537, -65538, 1, 65537, -65537, 1, 65537, -131072, 1, 65537, -131071, 1, 65537, -131070, 1, 65537, -131069, 1, 65537, -131068, 1, 65537, -131067, 1, 65537, -131066, 1, 65537, -131065, 1, 65537, -131064, 3, 65538, -131063, 1, 65537, -131062, 1, 65537, -131061, 1, 65537, -131060, 1, 65537, -13, 1, 65537, -12, 1, 65537, -11, 1, 65537, -10, 1, 65537, -9, 3, 65536, -8, 1, 65537, -7, 1, 65537, -6, 1, 65537, -5, 1, 65537, -4, 1, 65537, -3, 1, 65537, -2, 1, 65537, -1, 1, 65537, -65536, 1, 65537, -65535, 1, 65537, -65534, 1, 65537, -65533, 1, 65537, -65532, 1, 65537, -65531, 1, 65537, -65530, 1, 65537, -65529, 1, 65537, -65528, 3, 65538, -65527, 1, 65537, -65526, 1, 65537, -65525, 1, 65537, -65524, 1, 65537, 65523, 1, 65537, 65524, 1, 65537, 65525, 1, 65537, 65526, 1, 65537, 65527, 3, 65536, 65528, 1, 65537, 65529, 1, 65537, 65530, 1, 65537, 65531, 1, 65537, 65532, 1, 65537, 65533, 1, 65537, 65534, 1, 65537, 65535, 1, 65537, 0, 1, 65537, 1, 1, 65537, 2, 1, 65537, 3, 1, 65537, 4, 1, 65537, 5, 1, 65537, 6, 1, 65537, 7, 1, 65537, 8, 3, 65538, 9, 1, 65537, 10, 1, 65537, 11, 1, 65537, 12, 1, 65537, 131059, 1, 65537, 131060, 1, 65537, 131061, 1, 65537, 131062, 1, 65537, 131063, 3, 65536, 131064, 1, 65537, 131065, 1, 65537, 131066, 1, 65537, 131067, 1, 65537, 131068, 1, 65537, 131069, 1, 65537, 131070, 1, 65537, 131071, 1, 65537, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65537, 65543, 1, 65537, 65544, 3, 65538, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65537, 65548, 1, 65537, 196595, 1, 65537, 196596, 1, 65537, 196597, 1, 65537, 196598, 1, 65537, 196599, 3, 65536, 196600, 1, 65537, 196601, 1, 65537, 196602, 1, 65537, 196603, 1, 65537, 196604, 1, 65537, 196605, 1, 65537, 196606, 1, 65537, 196607, 1, 65537, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 3, 65538, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65537, 262131, 1, 65537, 262132, 1, 65537, 262133, 1, 65537, 262134, 1, 65537, 262135, 3, 131072, 262136, 3, 131073, 262137, 3, 131073, 262138, 3, 131073, 262139, 3, 131073, 262140, 3, 131073, 262141, 3, 131073, 262142, 3, 131073, 262143, 3, 131073, 196608, 3, 131073, 196609, 3, 131073, 196610, 3, 131073, 196611, 3, 131073, 196612, 3, 131073, 196613, 3, 131073, 196614, 3, 131073, 196615, 3, 131073, 196616, 3, 131074, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 1, 65537, 327667, 1, 65537, 327668, 1, 65537, 327669, 1, 65537, 327670, 1, 65537, 327671, 1, 65537, 327672, 1, 65537, 327673, 1, 65537, 327674, 1, 65537, 327675, 1, 65537, 327676, 1, 65537, 327677, 1, 65537, 327678, 1, 65537, 327679, 1, 65537, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65537, 393203, 1, 65537, 393204, 1, 65537, 393205, 1, 65537, 393206, 1, 65537, 393207, 1, 65537, 393208, 1, 65537, 393209, 1, 65537, 393210, 1, 65537, 393211, 1, 65537, 393212, 1, 65537, 393213, 1, 65537, 393214, 1, 65537, 393215, 1, 65537, 327680, 1, 65537, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 1, 65537, 458739, 1, 65537, 458740, 1, 65537, 458741, 1, 65537, 458742, 1, 65537, 458743, 1, 65537, 458744, 1, 65537, 458745, 1, 65537, 458746, 1, 65537, 458747, 1, 65537, 458748, 1, 65537, 458749, 1, 65537, 458750, 1, 65537, 458751, 1, 65537, 393216, 1, 65537, 393217, 1, 65537, 393218, 1, 65537, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65537, 393222, 1, 65537, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 1, 65537, 524275, 1, 65537, 524276, 1, 65537, 524277, 1, 65537, 524278, 1, 65537, 524279, 1, 65537, 524280, 1, 65537, 524281, 1, 65537, 524282, 1, 65537, 524283, 1, 65537, 524284, 1, 65537, 524285, 1, 65537, 524286, 1, 65537, 524287, 1, 65537, 458752, 1, 65537, 458753, 1, 65537, 458754, 1, 65537, 458755, 1, 65537, 458756, 1, 65537, 458757, 1, 65537, 458758, 1, 65537, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 1, 65537 )
script = ExtResource( 7 )

[node name="obj_door" type="StaticBody2D" parent="."]
position = Vector2( 0, -320 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="spr_dungeon_door" type="Sprite" parent="obj_door"]
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 64, 64, 32, 32 )

[node name="col_door" type="CollisionShape2D" parent="obj_door"]
shape = SubResource( 1 )

[node name="area_door" type="Area2D" parent="obj_door"]
collision_layer = 0

[node name="col_area_door" type="CollisionShape2D" parent="obj_door/area_door"]
shape = SubResource( 2 )

[node name="entity_mc" parent="." instance=ExtResource( 2 )]

[node name="area_change_map" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -344 )
destination = "res://maps/chapter5/chapter5-nycto.tscn"

[node name="col_area" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 3 )

[node name="node_spawn" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="0" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -256 )

[node name="1" type="Position2D" parent="node_spawn"]
position = Vector2( 0, -256 )

[node name="3" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -128 )

[node name="4" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -128 )

[node name="5" type="Position2D" parent="node_spawn"]
position = Vector2( 96, 0 )

[node name="6" type="Position2D" parent="node_spawn"]
position = Vector2( -96, 0 )

[node name="2" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -256 )

[node name="void" type="KinematicBody2D" parent="."]
position = Vector2( 0, -256 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="node_boss_attacks" parent="void" instance=ExtResource( 6 )]
script = ExtResource( 16 )

[node name="col_void" type="CollisionShape2D" parent="void"]
shape = SubResource( 4 )

[node name="spr_void" type="AnimatedSprite" parent="void"]
frames = SubResource( 5 )
animation = "signalling"

[node name="area_void_attack" type="Area2D" parent="void"]
collision_layer = 4
collision_mask = 0

[node name="polygon_void" type="Polygon2D" parent="void/area_void_attack"]
scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, 0, 0, -64, 64, 0, 0, 64 )

[node name="col_void_attack" type="CollisionShape2D" parent="void/area_void_attack"]
rotation = 0.785398
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 6 )

[node name="anim_void" type="AnimationPlayer" parent="void"]
anims/damaged = SubResource( 7 )
anims/rest = SubResource( 8 )
anims/void_attack = SubResource( 9 )

[node name="timer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="sfx_explosion" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource( 8 )
[connection signal="body_entered" from="obj_door/area_door" to="obj_door" method="_on_area_door_body_entered"]
